--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -52,8 +52,8 @@ editor_options:
 
 ### Tissue selection
 
-* [Min gene 0](realdata_final_tissueselection_mingene0.html)
-* [Min gene 1](realdata_final_tissueselection_mingene1.html)
+* [eQTL, 45 tissues jointly](realdata_final_tissueselection_mingene0.html)
+* [sQTL, 45 tissues jointly](realdata_final_tissueselection_mingene0_splicing.html)
 
 ## Omics
 
