--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -52,8 +52,12 @@ editor_options:
 
 ### Tissue selection
 
-* [eQTL, 45 tissues jointly](realdata_final_tissueselection_mingene0.html)
+45 tissues jointly
+
+* [eQTL, ](realdata_final_tissueselection_mingene0.html)
 * [sQTL, 45 tissues jointly](realdata_final_tissueselection_mingene0_splicing.html)
+
+Tissue filtered by sample size
 
 ## Omics
 
