--- a/analysis/realdata_final_tissueselection_mingene0_splicing.Rmd
+++ b/analysis/realdata_final_tissueselection_mingene0_splicing.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Tissue selection -- min gene 0"
+title: "Tissue selection -- splicing"
 author: "XSun"
-date: "2025-05-14"
+date: "2025-05-16"
 output:
   workflowr::wflow_html:
     code_folding: hide
@@ -10,13 +10,13 @@ output:
 
 # Introduction
 
-- For non-psychiatric traits, we ran a cTWAS analysis using eQTL data from all 49 GTEx tissues.
+- For non-psychiatric traits, we ran a cTWAS analysis using sQTL data from all 49 GTEx tissues.
 - For psychiatric traits, we used only the 9 GTEx brain tissues.
 - We ranked tissues by their G-test p-values & Fisher p-values and selected those passing the Bonferroni threshold (0.05 divided by the number of tissues) for the multi-group cTWAS analysis.
 
 - Default settings were used for computing z-scores, assembling input data, and estimating model parameters.
 
-mem: 50g/node
+Mem: 50g/node got killed, 100g/node
 
 ```
 z_gene <- compute_gene_z(z_snp, weights, ncore=10)
@@ -62,7 +62,7 @@ trait_psy <- c("SCZ-ieu-b-5102","ASD-ieu-a-1185","BIP-ieu-b-5110","MDD-ieu-b-102
 
 DT::datatable(matrix())
 
-folder_results <- "/project/xinhe/xsun/multi_group_ctwas/21.tissue_selection_0511/results/E_thin1_shared_all_mingene0/"
+folder_results <- "/project/xinhe/xsun/multi_group_ctwas/21.tissue_selection_0511/results/S_thin1_shared_all_mingene0/"
 
 ```
 
@@ -73,14 +73,14 @@ folder_results <- "/project/xinhe/xsun/multi_group_ctwas/21.tissue_selection_051
 ```{r results='asis', warning=FALSE, message=FALSE}
 converge_df <- c()
 for (trait in trait_nopsy){
-  
+
   param <- readRDS(paste0(folder_results,trait,"/",trait,".thin1.shared_all.param.RDS"))
-  
+
   gwas_n <- samplesize[trait]
 
   param_summarized_fisher <- summarize_param(param = param,gwas_n = gwas_n,enrichment_test = "fisher",alternative = "greater")
   param_summarized_G <- summarize_param(param = param,gwas_n = gwas_n,enrichment_test = "G")
-  
+
   param_df <- data.frame(
     group = names(param_summarized_fisher$group_size),
     group_size = as.numeric(param_summarized_fisher$group_size[names(param_summarized_fisher$group_size)]),
@@ -93,21 +93,21 @@ for (trait in trait_nopsy){
   )
 
   param_df$total_pve <- param_summarized_fisher$total_pve
-  
+
   param_df$prop_heritability <- paste0(round(param_df$prop_heritability * 100, 5), "%")
-  
+
   param_df <- param_df[order(param_df$enrichment_pval_fisher,decreasing = F),]
-  
+
   param_df_qtl <- param_df[-nrow(param_df),]
   threshold <- 0.05/(nrow(param_df_qtl)-1)
-  
-  
-  
+
+
+
   cat("<br>")
   cat(knitr::knit_print(DT::datatable(param_df, caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;',trait,options = list(pageLength = 10)))))
   cat("<br>")
-  
-  
+
+
   cat("<br>")
   cat("<br>")
   print(paste0("p-value cutoff(0.05/num_tissue) = ",threshold))
@@ -116,7 +116,7 @@ for (trait in trait_nopsy){
   cat(paste0("Number of selected tissue -- fisher = ",min(10,sum(param_df_qtl$enrichment_pval_fisher < threshold)),"\n"))
   cat("<br>")
   cat(paste0(
-    head(param_df_qtl$group[param_df_qtl$enrichment_pval_fisher < threshold], 10), 
+    head(param_df_qtl$group[param_df_qtl$enrichment_pval_fisher < threshold], 10),
     collapse = " "
   ))
   cat("<br>")
@@ -125,13 +125,13 @@ for (trait in trait_nopsy){
     cat(paste0("Number of selected tissue -- G = ",min(10,sum(param_df_qtl$enrichment_pval_G < threshold)),"\n"))
   cat("<br>")
   cat(paste0(
-    head(param_df_qtl$group[param_df_qtl$enrichment_pval_G < threshold], 10), 
+    head(param_df_qtl$group[param_df_qtl$enrichment_pval_G < threshold], 10),
     collapse = " "
   ))
   cat("<br>")
   cat("<br>")
   cat("<br>")
- 
+
   EM_iter <- length(param$loglik_iters)
   converge <- param$converged
   converge_df <- rbind(converge_df,c(trait,EM_iter,converge))
