--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -54,10 +54,14 @@ editor_options:
 
 45 tissues jointly
 
-* [eQTL, ](realdata_final_tissueselection_mingene0.html)
-* [sQTL, 45 tissues jointly](realdata_final_tissueselection_mingene0_splicing.html)
+* [eQTL](realdata_final_tissueselection_mingene0.html)
+* [sQTL](realdata_final_tissueselection_mingene0_splicing.html)
+* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude.html)
+* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude.html)
 
-Tissue filtered by sample size
+Tissue filtered by sample size, irrelevant tissues filtered out
+
+* [eQTL](realdata_final_tissueselection_mingene0_filtered.html)
 
 ## Omics
 
