--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -50,18 +50,27 @@ editor_options:
 
 ## Real data final round 05/14/2025
 
+### Exploring genetic architecture
+
+[LDL, IBD: different qtl combination](realdata_final_combine_qtls.Rmd)
+
 ### Tissue selection
 
 45 tissues jointly
 
 * [eQTL](realdata_final_tissueselection_mingene0.html)
 * [sQTL](realdata_final_tissueselection_mingene0_splicing.html)
-* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude.html)
-* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude.html)
 
 Tissue filtered by sample size, irrelevant tissues filtered out
 
-* [eQTL](realdata_final_tissueselection_mingene0_filtered.html)
+* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude.html)
+* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude.html)
+
+Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
+
+* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude_brainprocessed.html)
+* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude_brainprocessed.html)
+
 
 ## Omics
 
